--- a/glide.yaml
+++ b/glide.yaml
@@ -15,6 +15,8 @@ import:
   - context
 - package: gopkg.in/dancannon/gorethink.v2
   version: ~2.1.3
+- package: gopkg.in/redis.v5
+  version: ^5.0.0
 testImport:
 - package: github.com/stretchr/testify
   version: ~1.1.3
